# jolt

./: Cargo.toml  rust-toolchain.toml
.context/: CodeWalkthrough.md  Scope.md  Theory.md  Transpiler.md  writingExample.md
docs/: PoseidonTheory.md  poseidon-paramgen-explainer.md  poseidon-paramgen-notes.md
gnark-transpiler/: Cargo.toml
gnark-transpiler/data/: fib_stage1_data.json
gnark-transpiler/gnark-transpiler/data/: fib_stage1_data.json
gnark-transpiler/go/: count_test.go  example_test.go  go.mod  main.go  stage1.vk  stage1_bundle.json  stage1_circuit.ast.json  stage1_circuit.ast.md  stage1_circuit.go  stage1_circuit_test.go  witness.go  witness_loader.go
gnark-transpiler/go/cmd/: main.go  stage1.vk
gnark-transpiler/go/cmd/count/: main.go
gnark-transpiler/go/hyrax/: NOTES.md  README.md  go.mod  go.sum  hyrax_verifier.go  hyrax_verifier_test.go
gnark-transpiler/src/: ast_json.rs  codegen.rs  keccak.rs  lib.rs  main.rs  poseidon.rs
gnark-transpiler/tests/: codegen_test.rs
jolt-core/: Cargo.toml
jolt-core/src/poly/: opening_proof.rs
jolt-core/src/subprotocols/: booleanity.rs  hamming_weight.rs  opening_reduction.rs  sumcheck.rs  sumcheck_verifier.rs  univariate_skip.rs
jolt-core/src/transcripts/: blake2b.rs  keccak.rs  transcript.rs
jolt-core/src/zkvm/: mod.rs  stage1_only_verifier.rs  stepwise_verifier.rs
jolt-core/src/zkvm/bytecode/: mod.rs  read_raf_checking.rs
jolt-core/src/zkvm/instruction_lookups/: mod.rs  ra_virtual.rs  read_raf_checking.rs
jolt-core/src/zkvm/ram/: hamming_booleanity.rs  mod.rs  output_check.rs  ra_reduction.rs  ra_virtual.rs  raf_evaluation.rs  read_write_checking.rs  val_evaluation.rs  val_final.rs
jolt-core/src/zkvm/registers/: read_write_checking.rs  val_evaluation.rs
zklean-extractor/src/: lib.rs  main.rs  mle_ast.rs
(+6 files in other folders)
